test/corpus/constraint.txt
============================================================
True
============================================================

rule() :- true.

---

(program
  (rule
    (monotonic_rule
      head: (atom relation: (qualified_name (ident)))
      body:
        (disjunction
          (conjunction (constraint (bool)))))))

============================================================
Equal
============================================================

rule() :- 0 = y.

---

(program
  (rule
    (monotonic_rule
      head: (atom relation: (qualified_name (ident)))
      body:
        (disjunction
          (conjunction
            (constraint
              (comparison
                left: (argument (constant (number (integer (decimal)))))
                right: (argument (variable (ident))))))))))
