test/corpus/type_decl.txt
============================================================
Subtype symbol
============================================================

.type T <: symbol

---

(program
  (type_decl
    (subtype
      left:
        (ident)
      right:
        (primitive_type))))

============================================================
Type synonym
============================================================

.type p1 = q1

---

(program
  (type_decl
    (type_synonym
      left:
        (ident)
      right:
        (qualified_name (ident)))))

============================================================
Binary union
============================================================

.type P
  = Q
  | R

---

(program
  (type_decl 
    (type_union
      left:
        (ident)
      branch:
        (qualified_name (ident))
      branch:
        (qualified_name (ident)))))

============================================================
Nullary record
============================================================

.type r = [ ]

---

(program (type_decl (type_record left: (ident))))

============================================================
Binary record
============================================================

.type pt = [ x: number, y: number ]

---

(program
  (type_decl
    (type_record
      left:
        (ident)
      field:
        (attribute var: (ident) type: (primitive_type))
      field:
        (attribute var: (ident) type: (primitive_type)))))

============================================================
Binary record (no spaces)
============================================================

.type pt = [x:number,y:number]

---

(program
  (type_decl
    (type_record
      (ident)
      (attribute (ident) (primitive_type))
      (attribute (ident) (primitive_type)))))

============================================================
ADT
============================================================

.type Foo
  = Q { x: symbol }
  | R { y: number, z: Foo }

---

(program
  (type_decl
    (adt
      left: (ident)
      constructor: (ident)
      field: (attribute var: (ident) type: (primitive_type))
      constructor: (ident)
      field: (attribute var: (ident) type: (primitive_type))
      field: (attribute var: (ident) type: (qualified_name (ident))))))

============================================================
Redefinition of primitives
============================================================

.type number = number

---

(program (type_decl (type_synonym (ident) (primitive_type))))

============================================================
Legacy bare type declaration
============================================================

.type t

---

(program (type_decl (legacy_bare_type_decl (ident))))
